kubernetes-networks/canary/web-deploy-canary2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-canary2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 100%
  template:
    metadata:
      name: web-canary2
      labels: # Метки в формате key: value
        app: web-canary2
    spec: # Описание Pod
      containers: # Описание контейнеров внутри Pod
      - name: apache2
        image: madjo/kuber:apache
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
