kubernetes-networks/canary/web-svc-headless2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-canary2
spec:
  selector:
    app: web-canary2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
